<resources>
    <string name="app_name">AMI Phone</string>
    <string name="settings">Settings</string>
    <string name="SUCCESS">SUCCESS</string>
    <string name="FAILURE">FAILURE</string>
    <string name="_7">7</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="todo">TODO</string>
    <string name="server_asterisk">Server Asterisk</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="_0_0_0_0">0.0.0.0</string>
    <string name="_5038">5038</string>
    <string name="ami_user">AMI User</string>
    <string name="user_name">user name</string>
    <string name="user_secret">user secret</string>
    <string name="asterisk_context">Asterisk Context</string>
    <string name="from_internal">from-internal</string>
    <string name="my_phone_number">My Phone Number</string>
    <string name="enter_you_phone_number">enter you phone number</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="test">Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">DELETE</string>
    <string name="delete_all">DELETE ALL</string>
</resources>