<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:id="@+id/sliding_layout"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:umanoFadeColor="#00FFFFFF"
        app:umanoOverlay="false"
        app:umanoPanelHeight="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabIndicatorColor="#FD5F07">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabCalls"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:icon="@drawable/ic_baseline_local_phone_24" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabPhonebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_baseline_contact_phone_24" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPage"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/keypadLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/inputNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="4dp"
                            android:autofillHints=""
                            android:background="@null"
                            android:focusableInTouchMode="false"
                            android:gravity="center"
                            android:inputType="number"
                            android:textColor="#FFFFFF"
                            android:textSize="30sp" />

                        <ImageButton
                            android:id="@+id/butDel"
                            style="android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="false"
                            android:layout_alignParentLeft="false"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="2dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="20dp"

                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="2dp"
                            android:background="#00000000"
                            android:contentDescription="@string/todo"
                            android:foregroundGravity="right"
                            android:soundEffectsEnabled="true"
                            android:src="@drawable/ic_baseline_dialpad_24" />
                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/but1"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_1"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />


                    <Button
                        android:id="@+id/but2"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_2"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/but3"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_3"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/but4"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_4"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/but5"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_5"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/but6"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_6"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/but7"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_7"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/but8"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_8"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/but9"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_9"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/but0"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:text="@string/_0"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                    <ImageButton
                        android:id="@+id/butCall"
                        style="android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="#00000000"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/ic_baseline_call_24"
                        android:textSize="30sp" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>


</androidx.constraintlayout.widget.ConstraintLayout>


